# vitium

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  a.out  guidelines.md
.github/: dependabot.yml
.github/workflows/: build.yml  cargo-build.yml  cmake-multi-platform.yml  dependabot.yml  nextjs.yml  rust.yml
api/: Cargo.toml  README.md
api/doc/: http.md  serde.md
api/doc/http/: root.md
api/doc/http/api/: chat.md  hello.md  pc.md  player.md
api/doc/http/api/auth/: login.md  pass.md  signup.md
api/src/: chat.rs  cmd.rs  err.rs  lib.rs  net.rs  player.rs  prelude.rs  res.rs  uid.rs  user.rs
api/src/game/: attr.rs  cha.rs  char.rs  error.rs  fight.rs  level.rs  mart.rs  mat.rs  mod.rs  prelude.rs  prof.rs  race.rs  scena.rs  skill.rs  spell.rs  terra.rs
api/src/game/act/: atk.rs  mod.rs
api/src/game/components/: armor.rs  char.rs  container.rs  edible.rs  hp.rs  item.rs  melee.rs  mod.rs  pos.rs  prelude.rs  ranged.rs
api/src/game/item/: armor.rs  container.rs  edible.rs  melee.rs  mod.rs  ranged.rs
api/src/reg/: id.rs  mod.rs  prelude.rs  tab.rs
cli/: Cargo.toml  README.md
client/: .gitignore  CMakeLists.txt  Cargo.toml  app.config.ts  build-tailwind.sh  build.sh  client_main  client_main.cpp  cursed.cpp  data_structure.cpp  data_structure.hpp  dev.sh  error_code_list.md  eslint.config.mjs  gen-capi.sh  json.hpp:Zone.Identifier  keyboard.json  keyboard.toml  mingw_build.bat  msvc_build.bat  myncurses.hpp  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  style.toml  tailwind.config.js  tailwind.config.ts  test_call_rust.c  test_call_rust.cpp  text.txt  todo.md  tsconfig.json  ui.config.json  vitium_client_rust.h
client-cfi/: .gitignore  Cargo.toml  cfi.sh  test.c  test.cpp  vitium_client.h
client-cfi/doc/: function.md
client-cfi/src/: lib.rs
client/CmakeArtifacts/: CMakeCache.txt  Makefile  cmake_install.cmake
client/cxxcurses/: widgets.hpp
client/cxxcurses/terminal/: terminal.hpp
client/cxxcurses/widget/: window.hpp
client/doc/: chat.md  client-builtin-command.md  game-builtin-command.md  user-interface.md
client/src/: .gitignore  app.css  app.tsx  chatbox.rs  config.rs  connect.cpp  dev_compile.md  entry-client.tsx  frontend.cpp  func.rs  index.html  init.rs  keyboard.cpp  lib.rs  main.cpp  main.js  main.rs  map.cpp  map.rs  module.rs  registry.cpp  some.html  style.css
client/src-tauri/: Cargo.toml  Tauri.toml  tauri.conf.json
client/src-tauri/capabilities/: main.json
client/src-tauri/src/: auth.rs  chat.rs  cmd.rs  lib.rs  main.rs  net.rs  respack.rs
client/src-tauri/templates/: chat.html
client/src/app/: gamepage.tsx  gameview.tsx  globals.css  layout.tsx  login.tsx  page.tsx  playerlogin.tsx  popup.tsx
client/src/app/game/: page.tsx
client/src/app/gamepage/: page.tsx
client/src/app/login/: login.tsx  page.tsx
client/src/app/signup/: page.tsx
client/src/assets/: style.css
client/src/components/: Chat.tsx  ChatInput.tsx  ColorMode.tsx  DarkModeToggle.tsx  DarkmodeSwitch.tsx  NavBar.tsx  PureDOM.tsx  bubble.tsx  chat-sse.tsx  chat.tsx  chatbox.tsx  chatbubble.tsx  command-bubble.tsx  dark-mode-switch.tsx  host.tsx  icon.tsx  login-form.tsx  message-bubble.tsx  navbar.tsx  signup-form.tsx  sse.tsx  theme-provider.tsx  turbo-input.tsx  user.tsx
client/src/components/ui/: button.tsx
client/src/js/: main.js  util.js
client/src/lib/: auth.ts  chat.ts  cmd.ts  log.ts  util.ts  utils.ts
client/src/lib/cmd/: dnd.ts  send-img.ts
client/src/libs/: curses_include.hpp  ncurses_utils.cpp  ncurses_utils.hpp  timer.cpp
client/src/libs/Flecs/: CMakeLists.txt  License
client/src/routes/: game.tsx  index.tsx  login.tsx  signup.tsx
client/src/script/: base.ts  cmd.ts  tauri-api.ts  util.ts
client/src/script/ui/: game.html.ts  hall.html.ts  login.html.ts
client/src/ui/: game.html  hall.html  login.html
common/: Cargo.toml
common-cfi/: Cargo.toml  cfi.sh  test-cfi.sh  test_cfi.c  test_cfi.cpp  vitium_common.h
common-cfi/src/: act.rs  age.rs  dice.rs  item.rs  lib.rs  player.rs
common/src/: act.rs  action.rs  age.rs  armor.rs  atk.rs  attr.rs  bottle.rs  card.rs  cha.rs  chara.rs  character.rs  cmd.rs  config.rs  delta.rs  dice.rs  envelop.rs  error.rs  feature.rs  fight.rs  game.rs  id.rs  item.rs  json.rs  level.rs  lib.rs  load.rs  mart.rs  mat.rs  material.rs  module.rs  player.rs  prelude.rs  prof.rs  race.rs  record.rs  reg.rs  registry.rs  req.rs  request.rs  res.rs  (+14 more)
common/src/ecs/: compon.rs  entity.rs  mod.rs  prelude.rs  reg.rs  store.rs  tab.rs  table.rs  uid.rs
common/src/game/: act.rs  cha.rs  error.rs  fight.rs  item.rs  level.rs  map.rs  mart.rs  mat.rs  mod.rs  prelude.rs  prof.rs  race.rs  reg.rs  scena.rs  skill.rs  spell.rs  terra.rs  world.rs
common/src/game/act/: atk.rs  mod.rs  walk.rs
common/src/game/item/: armor.rs  container.rs  edible.rs  melee.rs  mod.rs  ranged.rs  test.rs
common/src/t_recs/: compon.rs  mod.rs  prelude.rs  reg.rs  store.rs  uid.rs
common/src/t_recs/store/: btree.rs  mod.rs
doc/: astro.config.ts  package.json
doc/patches/: astro@5.15.5.patch
doc/src/client/: command.md
doc/src/components/: Supported.astro
doc/src/content/docs/: index.mdx
doc/src/util/: version.ts
example/mod/: item.json
example/request/: act.txt  edit_chara.http  edit_player.http  edit_pswd.http  guideline.md  request.json  send_chat.http  sync.http
server/: Cargo.toml  README.md  config.toml
server/src/: cha.rs  chara.rs  cli.rs  crash.rs  dice.rs  game.rs  http.rs  input.rs  load.rs  log.rs  main.rs  prelude.rs  reg.rs  registry.rs  save.rs  scene.rs  server.rs  server_.rs  shutdown.rs  table.rs  tmp.rs
server/src/game/: mod.rs  prelude.rs  proc.rs  reg.rs  slave.rs
server/src/game/slave/: walk.rs
server/src/server/: auth.rs  chat.rs  cmd.rs  handler.rs  log.rs  mod.rs  network.rs  prelude.rs  profile.rs  proxy.rs  test.rs
server/src/server/cmd/: clear.rs  echo.rs  help.rs  kill.rs  loglevel.rs  roll.rs  say.rs  shutdown.rs
server/templates/: client.html
server/test/: edit_player.http
(+15 files in other folders)
