[package]
name = "vitium-api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
thiserror = "2.0.11"
serde = { version = "1.0.210", features = ["derive"] }
fe3o4 = { path = "../../fe3o4" }
static_init = { version = "1.0.3", optional = true }
wasm-bindgen = { version = "0.2.100", features = ["serde"] }
# serde-wasm-bindgen = "0.6.5"
tsify-next = { version = "0.5.5", features = ["js"] }

[features]
static-init = ["dep:static_init", "fe3o4/static-init"]
