[package]
name = "vitium-api"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
thiserror = "2.0.11"
serde = { version = "1.0.210", features = ["derive"] }
fe3o4 = "0.3.0"
bevy_ecs = "0.16.0"
serde_json = "1.0.140"

[target.'cfg(target_family="wasm")'.dependencies]
wasm-bindgen = { version = "0.2.100" }
tsify-next = { version = "0.5.5", features = ["js"] }
