[package]
name = "vitium-api"
version = "0.1.1"
edition = "2024"
authors = ["misaka10987 <misaka10987@outlook.com>"]
description = "APIs for Vitium"
documentation = "https://github.com/misaka10987/vitium"
homepage = "https://github.com/misaka10987/vitium"
repository = "https://github.com/misaka10987/vitium"
readme = "README.md"
keywords = ["vitium", "api", "game"]
license = "GPL-3.0-or-later"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
thiserror = "2.0.11"
serde = { version = "1.0.210", features = ["derive"] }
fe3o4 = "0.3.0"
bevy_ecs = "0.17.2"
serde_json = "1.0.140"

[target.'cfg(target_family="wasm")'.dependencies]
wasm-bindgen = { version = "0.2.100" }
tsify-next = { version = "0.5.5", features = ["js"] }
