[package]
name = "vitium"
version = "0.1.0"
edition = "2024"
authors = ["misaka10987 <misaka10987@outlook.com>"]
description = "CLI for Vitium, the framework for TRPG"
documentation = "https://github.com/misaka10987/vitium"
homepage = "https://github.com/misaka10987/vitium"
repository = "https://github.com/misaka10987/vitium"
readme = "README.md"
keywords = ["vitium", "trpg", "cli", "game"]
license = "GPL-3.0-or-later"

[dependencies]
