[package]
name = "vitium-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = {version = "0.20.0",default-features =  false, features = ["crossterm-backend","toml"]}
http-auth-basic = "0.3.3"
reqwest = {version = "0.12.3",features = ["blocking"]}
vitium-common = { path = "../common" }
