[package]
name = "vitium-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vitium-common = { path = "../common" }
cursive = {version = "0.20.0",default-features =  false, features = ["crossterm-backend","toml"]}
http-auth-basic = "0.3.3"
reqwest = {version = "0.12.3",features = ["blocking"]}
serde_json = "1.0.115"
serde = "1.0.197"
futures = "0.3.30"
toml = "0.8.12"
serde_derive = "1.0.198"
log = "0.4.21"
once_cell = "1.19.0"
tokio = "1.37.0"
