[package]
name = "vitium-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = { version = "0.13.2", features = [
    "trace",
], default-features = false }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.110"
