[package]
name = "vitium-common"
version = "0.1.0"
edition = "2021"
authors = ["misaka10987 <misaka10987@outlook.com>"]
description = "Utilities for TRPG."
documentation = "https://github.com/misaka10987/vitium"
homepage = "https://github.com/misaka10987/vitium"
repository = "https://github.com/misaka10987/vitium"
readme = "README.md"
keywords = ["vitium", "game", "trpg"]
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = { version = "6.0.1", features = ["serde"] }
kstring = "2.0.0"
once_cell = "1.19.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.110"
tracing = "0.1.40"
