[package]
name = "vitium-server"
version = "0.1.0"
edition = "2024"
authors = ["misaka10987 <misaka10987@outlook.com>"]
description = "Utilities for TRPG."
documentation = "https://github.com/misaka10987/vitium"
homepage = "https://github.com/misaka10987/vitium"
repository = "https://github.com/misaka10987/vitium"
readme = "README.md"
keywords = ["vitium", "game", "trpg"]
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vitium-api = { path = "../api" }
basileus = "0.1.4"
axum = { version = "0.8.3", features = ["macros", "tokio", "http2", "ws"] }
tokio = { version = "1.44.2", features = [
    "rt-multi-thread",
    "tracing",
    "signal",
    "fs",
    "io-std",
    "io-util",
] }
serde = { version = "1.0.219", features = ["derive"] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
clap = { version = "4.5.35", features = ["derive", "string"] }
clearscreen = "4.0.1"
toml = "0.8.20"
serde_json = "1.0.140"
thiserror = "2.0.12"
axum-extra = { version = "0.10.1", features = ["cookie"] }
anyhow = "1.0.97"
ctrlc = "3.4.6"
dicexp = "1.1.1"
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio"] }
tokio-stream = "0.1.17"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
colored = "3.0.0"
http-auth-basic = "0.3.5"
pingora = { version = "0.4.0", features = ["proxy", "rustls"] }
async-trait = "0.1.88"
http = "1.3.1"
static_init = "1.0.3"
shutup = "0.2.0"
shell-words = "1.1.0"
rustyline = "15.0.0"
serde-inline-default = "0.2.3"
