[package]
name = "vitium-server"
version = "0.1.0"
edition = "2024"
authors = ["misaka10987 <misaka10987@outlook.com>"]
description = "Backend server for Vitium, the TRPG framework"
documentation = "https://github.com/misaka10987/vitium"
homepage = "https://github.com/misaka10987/vitium"
repository = "https://github.com/misaka10987/vitium"
readme = "README.md"
keywords = ["vitium", "game", "trpg", "server"]
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vitium-api = "0.1.1"
basileus = "0.1.5"
axum = { version = "0.8.3", features = ["macros", "tokio", "http2", "ws"] }
tokio = { version = "1.49.0", features = ["full", "tracing", "io-uring"] }
serde = { version = "1.0.219", features = ["derive"] }
tracing-subscriber = "0.3.20"
tracing = "0.1.41"
clap = { version = "4.5.57", features = ["derive", "string"] }
clearscreen = "4.0.1"
toml = "0.9.8"
serde_json = "1.0.140"
thiserror = "2.0.12"
axum-extra = { version = "0.12.1", features = ["cookie"] }
anyhow = "1.0.97"
ctrlc = "3.4.6"
dicexp = "1.1.1"
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio"] }
tokio-stream = "0.1.17"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
colored = "3.0.0"
http-auth-basic = "0.3.7"
async-trait = "0.1.88"
http = "1.3.1"
static_init = "1.0.3"
shutup = "0.2.0"
shell-words = "1.1.0"
rustyline = "17.0.2"
serde-inline-default = "1.0.1"
url = { version = "2.5.8", features = ["serde"] }
askama = "0.15.4"
local-ip-address = "0.6.10"
urlencoding = "2.1.3"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
